[tool.poetry]
name = "interlocking-exporter"
version = "0.9"
description = ""
authors = ["OSM HPI <OSM@HPI>"]
readme = "README.md"
packages = [{include = "interlocking_exporter"}]

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges"}
railway-route-generator = {git = "https://github.com/bp2022-ap1/railway-route-generator.git", branch="refactor/replace-connected-nodes-edges"}
vacancy-section-generator = {git = "https://github.com/bp2022-ap1/vacancy-section-generator.git", branch="refactor/replace-connected-nodes-edges"}


[tool.poetry.group.dev.dependencies]
cli-importer = {git = "https://github.com/bp2022-ap1/cli-importer", branch="refactor/replace-connected-nodes-edges"}
orm-importer = {git = "https://github.com/bp2022-ap1/orm-importer.git", branch="refactor/replace-connected-nodes-edges"}
websockets = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
